git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1208 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/comfacdevolucion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/comfacdevolucion/startup.vm
@@ -120,7 +120,7 @@
 				
                     <div id="div_two" title="" class="comfacdevolucion_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" style="width:990px; padding-left:6px;"><strong>Devoluci&oacute;n a Proveedor</strong></div>
+                            <div class="fixed column" style="width:1120px; padding-left:6px;"><strong>Devoluci&oacute;n a Proveedor</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px; background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
@@ -144,13 +144,14 @@
 										
                                         <table border="0" style="margin:0; padding:0;">
 											<tr>
-												<td width="630"></td>
+												<td width="700"></td>
 												<td width="10"></td>
-												<td width="90"></td>
-												<td width="300"></td>
+												<td width="100"></td>
+												<td width="350"></td>
 											</tr>
+
 											<tr>
-												<td valign="top" width="630"  > 
+												<td valign="top" width="700"  > 
 													<table border="0" class="gral">
 														
 														<tr>
@@ -234,7 +235,7 @@
 												<td width="10"></td>
 												<!--<td width="60"></td>-->
 												
-												<td width="350" colspan="2" valign="top" style="border: solid 1px #454442;">
+												<td width="450" colspan="2" valign="top" style="border: solid 1px #454442;">
 													
 													<table border="0" width="320" class="gral">
 														<tr>
@@ -377,12 +378,16 @@
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="75">&nbsp;Costo&nbsp;Unitario</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;Importe</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;Impuesto</td>
+																
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="50">&nbsp;%&nbsp;IEPS</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="70">&nbsp;Monto&nbsp;IEPS</td>
+																
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;Cant.&nbsp;Devuelto</td>
-																<td class="grid" style="background-color: rgb(180, 180, 180);" width="100">&nbsp;Cant.&nbsp;a&nbsp;Devolver</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Cant.&nbsp;a&nbsp;Devolver</td>
 															</tr>
 														</thead>
 													</table>
-													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:970; height: 115px; border:1px solid #C1DAD7 !important;">	
+													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:1100; height: 115px; border:1px solid #C1DAD7 !important;">	
 														<table>
 															<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos" class="gral">
 																
@@ -394,7 +399,7 @@
 											</tr>
 											
 											<tr>
-												<td width="650" colspan="3">
+												<td width="810" colspan="3">
 													<div id="div_warning_grid"  style="width:650px; height:90px; display:none;">
 														<table border="0">
 															<tr>
@@ -421,8 +426,8 @@
 													</div>
 												</td>
 												<!--<td width="10"></td>
-												<td width="90"></td>-->
-												<td width="300" align="right">
+												<td width="100"></td>-->
+												<td width="350" align="right">
 													<table border="0" class="gral">
 														
 														<tr>
@@ -433,7 +438,13 @@
 														</tr>
 														<tr>
 															<td width="35"></td>
-															<td width="60" style="font-weight: bold;">Impuesto</td>
+															<td width="60"  style="font-weight: bold;">IEPS</td>
+															<td width="100"><input type="text" name="ieps_nota" value="0.00" style="width:100px; text-align:right;" readOnly="true"></td>
+															<td width="25"></td>
+														</tr>
+														<tr>
+															<td width="35"></td>
+															<td width="60" style="font-weight: bold;">IVA</td>
 															<td width="100"><input type="text" name="impuesto" value="0.00" style="width:100px; text-align:right;" readOnly="true"></td>
 															<td width="25"></td>
 														</tr>
@@ -453,10 +464,10 @@
                             </div>
 
 
-                            <div class="fixed column" style="width:983px; background:; text-align:right; padding-left:; position:absolute; margin-top:4px;">
+                            <div class="fixed column" style="width:1113px; background:; text-align:right; padding-left:; position:absolute; margin-top:4px;">
 								<table border="0">
 									<tr>
-										<td width="983"></td>
+										<td width="1113"></td>
 										<td>
 											<div id="boton_actualizar" style="width:77px; height:24px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn1.png'); background-repeat:no-repeat;"></div>
 											
