git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1210 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/pocpedidosautoriza/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidosautoriza/startup.vm
@@ -433,15 +433,20 @@
                                                                 <td width="60">Subtotal</td>
                                                                 <td width="120"><INPUT TYPE="text" name="subtotal" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr id="tr_ieps">
                                                                 <td width="80"></td>
-                                                                <td width="60">Impuesto</td>
-                                                                <td width="120"><INPUT TYPE="text" name="impuesto" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+                                                                <td width="60">IEPS</td>
+                                                                <td width="120"><input type="text" name="ieps" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
                                                             </tr>
                                                             <tr>
                                                                 <td width="80"></td>
-                                                                <td width="60">Retenido</td>
-                                                                <td width="120"><INPUT TYPE="text" name="impuesto_retenido" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+                                                                <td width="60">IVA</td>
+                                                                <td width="120"><INPUT TYPE="text" name="impuesto" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+                                                            </tr>
+                                                            <tr id="tr_retencion">
+                                                                <td width="80"></td>
+                                                                <td width="60">Retenci&oacute;n</td>
+                                                                <td width="120"><input type="text" name="impuesto_retenido" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
                                                             </tr>
                                                             <tr>
                                                                 <td width="80"></td>
